<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#FF000000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:gravity="center"
        android:paddingTop="15dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/gallows"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:src="@drawable/android_hangman_gallows" />

        <ImageView
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/head"
            android:paddingLeft="70dp"
            android:paddingTop="23dp"
            android:src="@drawable/android_hangman_head" />

        <ImageView
            android:id="@+id/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/body"
            android:paddingLeft="80dp"
            android:paddingTop="53dp"
            android:src="@drawable/android_hangman_body" />

        <ImageView
            android:id="@+id/arm1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arm"
            android:paddingLeft="60dp"
            android:paddingTop="60dp"
            android:src="@drawable/android_hangman_arm1" />

        <ImageView
            android:id="@+id/arm2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arm"
            android:paddingLeft="88dp"
            android:paddingTop="60dp"
            android:src="@drawable/android_hangman_arm2" />

        <ImageView
            android:id="@+id/leg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/leg"
            android:paddingLeft="65dp"
            android:paddingTop="85dp"
            android:src="@drawable/android_hangman_leg1" />

        <ImageView
            android:id="@+id/leg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/leg"
            android:paddingLeft="85dp"
            android:paddingTop="85dp"
            android:src="@drawable/android_hangman_leg2" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/word"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="#FFFFFFFF"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp" >
    </LinearLayout>

    <GridView
        android:id="@+id/letters"
        android:layout_width="fill_parent"
        android:layout_height="186dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.19"
        android:background="#FF000000"
        android:horizontalSpacing="5dp"
        android:numColumns="7"
        android:padding="5dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp" />

        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:orientation="horizontal">

            <TextView
                android:id="@+id/tvHangmanLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="learning spanish"
                android:layout_marginRight="5dp"
                android:textColor="#FFFFFFFF"
                android:textSize="12sp" />
            
            <ImageView
                android:id="@+id/ivHangmanLanguage"
                android:layout_width="15dp"
                android:layout_height="15dp"
				android:layout_marginRight="20dp"
				android:src="@drawable/spain1"
                android:textSize="12sp" />

           <TextView
               android:id="@+id/hangmanHint"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="hint: perro"
			   android:layout_marginRight="20dp"
               android:textColor="#FFFFFFFF"
               android:textSize="12sp" />

          <TextView
	        android:id="@+id/hangmanScore"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	       	android:textSize="12sp"
	       	android:layout_marginRight="20dp"
	       	android:textColor="#FFFFFFFF"
	        android:text="score: 0" />
            
	    </LinearLayout>


</LinearLayout>